name:                phantom
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable phantom
  main-is: Main.hs
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.6 && <4.7,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       array >=0.4 && <0.5,
                       bytestring >=0.10 && <0.11,
                       cryptohash >=0.11 && <0.12
  hs-source-dirs:      src
  default-language:    Haskell2010