name:                phantom
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7,
                       array >=0.4 && <0.5,
                       bytestring >=0.10 && <0.11,
                       cryptohash >=0.11 && <0.12,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
  exposed-modules:     Phantom.Config,
                       Phantom.Random,
                       Phantom.Util

executable phantom
  main-is:             src/Main.hs
  build-depends:       base,
                       phantom
  default-language:    Haskell2010

Test-Suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       bytestring,
                       phantom,
                       test-framework,
                       test-framework-hunit,
                       HUnit
  default-language:    Haskell2010
